<resources>
    <string name="app_name">TODO LIST</string>
    <string name="add_task">Add Task</string>

    <string name="task_hint">Enter Task</string>
    <string name="pr_hint">Priority</string>
    <string name="deadLine_hint">Enter Deadline Date</string>
    <string name="description_hint">Enter Description</string>
    <string name="add">Add Task</string>
    <string name="no_data">No Data</string>

    <string name="update">Update Task</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>

    <string name="number">1</string>
    <string name="task1">Task 1</string>
    <string name="p_text">high</string>
    <string name="deadLine_text">2024.05.27</string>
    <string name="description_text">description 1</string>

    <string name="menu">Delete All</string>

    <string name="app_title">TaskNavigator</string>
    <string name="app_title_under">Manage Your Day</string>


</resources>